project items mobile overflow fix

--- a/resources/assets/styles/layouts/global/projects/_image-overlay.scss
+++ b/resources/assets/styles/layouts/global/projects/_image-overlay.scss
@@ -4,20 +4,25 @@
   height: 450px;
   border-radius: 0 0 3px 3px;
 
-  @extend %image-border;
-
   @include atTablet {
     height: auto;
   }
 
+  @extend %image-border;
+
   .project-info {
     position: absolute;
-    top: 10%;
+    top: 0;
     left: 0;
     opacity: 0;
     padding: 0 25px;
     transition: all 0.5s ease;
-    width: 80%;
+    padding-top: 7.5%;
+
+    @include atTablet {
+      max-height: 90%;
+      overflow-y: scroll;
+    }
 
     svg {
       font-size: 1.5em;
